update-footer-info-diseño

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -157,7 +157,7 @@ img {
 footer {
     width: 100%;
     padding: 20px 50px;
-    background-color: #cac2c2;
+    background-color: #212020;
     @extend %flexbox;
 
     nav {     
